@@ -77,11 +77,13 @@ void hc_signal (void (callback) (int));
 int mycracked (hashcat_ctx_t *hashcat_ctx);
 int myabort_runtime (hashcat_ctx_t *hashcat_ctx);
 int myabort_checkpoint (hashcat_ctx_t *hashcat_ctx);
+int myabort_finish (hashcat_ctx_t *hashcat_ctx);
 int myabort (hashcat_ctx_t *hashcat_ctx);
 int myquit (hashcat_ctx_t *hashcat_ctx);
 int bypass (hashcat_ctx_t *hashcat_ctx);
 int SuspendThreads (hashcat_ctx_t *hashcat_ctx);
 int ResumeThreads (hashcat_ctx_t *hashcat_ctx);
 int stop_at_checkpoint (hashcat_ctx_t *hashcat_ctx);
+int finish_after_attack (hashcat_ctx_t *hashcat_ctx);
 
 #endif // _THREAD_H
